<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addProject.AddProjectActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_primary"
        android:elevation="5dp"
        android:gravity="center"
        android:title="@string/add_project"
        android:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingTop="30dp"
        >

            <TextView
                android:id="@+id/tv_judul_proj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_projek"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_proj_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:elevation="100dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_judul_proj"
                app:layout_constraintTop_toBottomOf="@+id/tv_judul_proj">

                <EditText
                    android:id="@+id/ed_proj_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="@string/input_proj_name"
                    android:hint="@string/input_proj_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/text_kategori"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_proj_name"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_proj_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:elevation="100dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_category">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pilih_kategori"
                    android:inputType="none"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_pilih_gambar"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_proj_category"
                />

            <Button
                android:id="@+id/bt_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tex_choose_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_img"
                app:layout_constraintStart_toStartOf="parent"
                />

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/photo_holder"
                android:contentDescription="@string/desc_proj_image"
                app:layout_constraintTop_toBottomOf="@+id/bt_gallery"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/teks_deskripsi"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_img"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_desc"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="100dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc">

                <EditText
                    android:id="@+id/ed_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:minHeight="200dp"
                    android:autofillHints="@string/input_proj_name"
                    android:hint="@string/input_proj_desc" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/text_waktu_pengerjaan_proyek"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/til_desc"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:background="@null"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:minWidth="130dp"
                android:layout_marginEnd="16dp"
                android:elevation="100dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_until"
                app:layout_constraintTop_toTopOf="@+id/tv_until"
                app:layout_constraintBottom_toBottomOf="@+id/tv_until"
                >

                <EditText
                    android:id="@+id/ed_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/baseline_calendar_month_24"
                    android:hint="@string/date_start"
                    android:autofillHints="@string/date_start"
                    android:inputType="date"
                    android:focusable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/tv_until"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="#737373"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_finish_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:background="@null"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:minWidth="130dp"
                android:layout_marginStart="16dp"
                android:elevation="100dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/tv_until"
                app:layout_constraintTop_toTopOf="@+id/til_date">

                <EditText
                    android:id="@+id/ed_finish_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/baseline_calendar_month_24"
                    android:hint="@string/date_finish"
                    android:autofillHints="@string/date_finish"
                    android:inputType="date"
                    android:focusable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bt_buat_projek"
                app:layout_constraintTop_toBottomOf="@+id/til_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/bt_submit"
                app:layout_constraintStart_toStartOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>