<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_intro_scene"
    tools:context=".ui.splashScreen.IntroActivity">

    <!--  page 1  -->
    <ImageView
        android:id="@+id/img_1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/page_1_img_idekita"
        app:layout_constraintBottom_toTopOf="@id/tv_tittle_1"
        app:layout_constraintEnd_toEndOf="@+id/tv_tittle_1"
        app:layout_constraintStart_toStartOf="@+id/tv_tittle_1" />

    <TextView
        android:id="@+id/tv_tittle_1"
        android:layout_width="300dp"
        android:paddingHorizontal="25dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/have_idea"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_desc_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/tv_1_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_tittle_1"
        app:layout_constraintStart_toStartOf="@+id/tv_tittle_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_1" />
    <!--   2 -->

    <ImageView
        android:id="@+id/img_2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/page_2_gabut_idekita"
        app:layout_constraintBottom_toTopOf="@id/tv_tittle_2"
        app:layout_constraintEnd_toEndOf="@+id/tv_tittle_2"
        app:layout_constraintStart_toStartOf="@id/tv_tittle_2" />

    <TextView
        android:id="@+id/tv_tittle_2"
        android:layout_width="300dp"
        android:paddingHorizontal="25dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/tittle_2"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc_2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/desc_2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_tittle_2"
        app:layout_constraintStart_toStartOf="@+id/tv_tittle_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_2" />

    <!--    3-->
    <ImageView
        android:id="@+id/img_3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ideation_logo_crop"
        app:layout_constraintBottom_toTopOf="@+id/tv_tittle_3"
        app:layout_constraintEnd_toEndOf="@+id/tv_tittle_3"
        app:layout_constraintStart_toStartOf="@+id/tv_tittle_3" />

    <TextView
        android:id="@+id/tv_tittle_3"
        android:layout_width="300dp"
        android:paddingHorizontal="25dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tittle_page_3"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="286dp" />

    <TextView
        android:id="@+id/tv_desc_3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/desc_page_3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_tittle_3"
        app:layout_constraintStart_toStartOf="@+id/tv_tittle_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_3" />

    <!--  menu  -->

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_rectangle_off_24"
        app:altSrc="@drawable/baseline_rectangle_active_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu_2"
        app:layout_constraintEnd_toStartOf="@+id/menu_2" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:src="@drawable/baseline_rectangle_off_24"
        app:altSrc="@drawable/baseline_rectangle_active_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_rectangle_off_24"
        app:altSrc="@drawable/baseline_rectangle_active_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu_2"
        app:layout_constraintStart_toEndOf="@+id/menu_2" />

    <Button
        android:id="@+id/bt_to_login"
        android:backgroundTint="#FF9800"
        android:text="@string/lanjut"
        android:textColor="#838383"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.motion.widget.MotionLayout>